// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DSHR tests test DSHR props snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "height": 2,
      },
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "width": "50%",
      },
    ]
  }
/>
`;

exports[`DSHR tests test default DSHR snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "height": 2,
      },
      Object {
        "backgroundColor": undefined,
      },
      Object {
        "width": "100%",
      },
    ]
  }
/>
`;
